ThreadSanitizer: data race [@ mozilla::TrackBuffersManager::OnDemuxerInitDone] vs. [@ HasAudio]
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
People
(Reporter: tsmith, Assigned: KrisWright)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
The attached crash information was detected by ThreadSanitizer while loading a video on youtube.com on mozilla-central 20210108-e7ad4ad7c65b.
General information about TSan reports
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
Comment 1•4 years ago
•
|
||
mAudioTracks.mNumTracks is being accessed on two separate threads without being properly synchronized. Buffered does acquire mMutex, but it's not intended to guard this field in particular, so OnDemuxerInitDone never acquires it. So it seems it's a question of whether mNumTracks should be made atomic, or whether it should become one of the fields protected by mMutex.
Permalinks to problematic lines:
vs
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
HasAudio is capable of racing between TrackBuffersManager::OnDemuxerInitDone and TrackBuffersManager::Buffer. One option was to protect all of these calls by the mutex, or we could simply make TrackData::mNumTracks atomic. The latter seems like a reasonable solution given it looks like it’s only got one notable race between its accesses.
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Comment 5•4 years ago
|
||
The patch landed in nightly and beta is affected.
:KrisWright, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•4 years ago
|
Description
•