Bug 1685838 - Make TrackDate::mNumTracks atomic r=bryce

`HasAudio` is capable of racing between `TrackBuffersManager::OnDemuxerInitDone` and `TrackBuffersManager::Buffer`. One option was to protect all of these calls by the mutex, or we could simply make `TrackData::mNumTracks` atomic. The latter seems like a reasonable solution given it looks like it’s only got one notable race between its accesses.

Differential Revision: https://phabricator.services.mozilla.com/D102484